@@ -42,7 +42,7 @@ xklavierinc_HEADERS = xklavier.h xkl_config_registry.h xkl_engine.h \
 libxklavier_la_SOURCES = xklavier.c xklavier_evt.c xklavier_config.c \
 	xklavier_xkb.c xklavier_evt_xkb.c xklavier_config_xkb.c xklavier_toplevel.c \
 	xklavier_xmm.c xklavier_xmm_opts.c xklavier_evt_xmm.c xklavier_config_xmm.c \
-	xklavier_util.c xklavier_config_i18n.c xklavier_props.c xklavier_dump.c xkl_engine_marshal.c \
+	xklavier_util.c xklavier_props.c xklavier_dump.c xkl_engine_marshal.c \
 	$(noinst_HEADERS) $(xklavierinc_HEADERS)
 libxklavier_la_LDFLAGS = -version-info @VERSION_INFO@ \
  $(XML_LIBS) $(GLIB_LIBS) \
