@@ -1,3 +1,10 @@
+2007-10-06 svu
+
+	* libxklavier/Makefile.am, libxklavier/xklavier_config.c,
+	libxklavier/xklavier_config_i18n.c, libxklavier/xklavier_private.h:
+	now, only gettext is doing string translation. No more hackish code in
+	that area.
+
 2007-10-03 svu
 
 	* libxklavier/xklavier_config.c: using xkeyboard-config domain for
